fix: Fixed log in button. It is centered now. Fixed some text that wasnt aligned properly. Added colour.

--- a/src/App.css
+++ b/src/App.css
@@ -33,8 +33,15 @@
   }
 }
 
-input {
+body {
+	background-color: #010e13;
+}
+
+input[type=text] {
 	width: 400px;
+	background-color: #e3f6fe;
+	border: none;
+	border-radius: 5px
 }
 
 button {
@@ -46,4 +53,8 @@ button {
 	display: flex;
 	flex-direction: column;
 	margin-bottom: 10px;
+}
+
+.logo {
+	color: #07aef8;
 }
