--- a/src/LogInPage.css
+++ b/src/LogInPage.css
@@ -3,11 +3,11 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 }
 
 .information-div {
 	margin: auto;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 }
